--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "appwrite": "^10.2.0",
     "next": "15.5.3",
+    "node-appwrite": "^13.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
