fix: ui upgrade coming soon

--- a/appwrite.config.json
+++ b/appwrite.config.json
@@ -38,5 +38,143 @@
                 "mockNumbers": []
             }
         }
-    }
+    },
+    "sites": [
+        {
+            "$id": "68d8069d00307846491d",
+            "name": "appwrite-passkey",
+            "enabled": true,
+            "logging": true,
+            "framework": "nextjs",
+            "timeout": 30,
+            "installCommand": "npm install",
+            "buildCommand": "npm run build",
+            "outputDirectory": "./.next",
+            "specification": "s-1vcpu-512mb",
+            "buildRuntime": "node-22",
+            "adapter": "",
+            "fallbackFile": "",
+            "path": "sites/appwrite-passkey"
+        }
+    ],
+    "tablesDB": [
+        {
+            "$id": "webauthnDB",
+            "name": "WebAuthn",
+            "enabled": true
+        }
+    ],
+    "tables": [
+        {
+            "$id": "webauthnChallenges",
+            "$permissions": [
+                "create(\"any\")"
+            ],
+            "databaseId": "webauthnDB",
+            "name": "Challenges",
+            "enabled": true,
+            "columns": [
+                {
+                    "key": "userId",
+                    "type": "string",
+                    "required": true,
+                    "array": false,
+                    "size": 256,
+                    "default": null,
+                    "encrypt": true
+                },
+                {
+                    "key": "challenge",
+                    "type": "string",
+                    "required": true,
+                    "array": false,
+                    "size": 512,
+                    "default": null,
+                    "encrypt": true
+                },
+                {
+                    "key": "createdAt",
+                    "type": "datetime",
+                    "required": false,
+                    "array": false,
+                    "format": "",
+                    "default": null
+                }
+            ],
+            "indexes": [
+                {
+                    "key": "createdAt_index",
+                    "type": "key",
+                    "status": "available",
+                    "orders": [
+                        "ASC"
+                    ]
+                }
+            ]
+        },
+        {
+            "$id": "webauthnCredentials",
+            "$permissions": [
+                "create(\"any\")"
+            ],
+            "databaseId": "webauthnDB",
+            "name": "Credentials",
+            "enabled": true,
+            "columns": [
+                {
+                    "key": "userId",
+                    "type": "string",
+                    "required": true,
+                    "array": false,
+                    "size": 256,
+                    "default": null,
+                    "encrypt": true
+                },
+                {
+                    "key": "publicKey",
+                    "type": "string",
+                    "required": true,
+                    "array": false,
+                    "size": 5000,
+                    "default": null,
+                    "encrypt": true
+                },
+                {
+                    "key": "counter",
+                    "type": "integer",
+                    "required": false,
+                    "array": false,
+                    "min": -9223372036854775808,
+                    "max": 9223372036854775807,
+                    "default": 0
+                },
+                {
+                    "key": "createdAt",
+                    "type": "datetime",
+                    "required": false,
+                    "array": false,
+                    "format": "",
+                    "default": null
+                },
+                {
+                    "key": "updatedAt",
+                    "type": "datetime",
+                    "required": false,
+                    "array": false,
+                    "format": "",
+                    "default": null
+                }
+            ],
+            "indexes": [
+                {
+                    "key": "userId_index",
+                    "type": "key",
+                    "status": "available",
+                    "orders": [
+                        "ASC"
+                    ]
+                }
+            ]
+        }
+    ]
 }
