--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "appwrite": "^10.2.0",
+    "appwrite": "^20.1.0",
+    "ethers": "^6.15.0",
     "next": "15.5.3",
-    "node-appwrite": "^13.0.0",
+    "node-appwrite": "^19.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
