fix: extend functionlity with function methods

--- a/env.sample
+++ b/env.sample
@@ -1,4 +1,16 @@
 # Public (exposed to browser)
 NEXT_PUBLIC_APPWRITE_ENDPOINT=
 NEXT_PUBLIC_APPWRITE_PROJECT=
+
+# Server-side API key (keep secret!)
 APPWRITE_API=
+
+# Authentication Method Configuration (optional)
+# Values: 'default' (Next.js API route) | 'function' (Appwrite Function)
+# If not set or invalid, defaults to 'default'
+#NEXT_PUBLIC_APPWRITE_AUTH_METHOD=default
+
+# Required only when using 'function' auth method
+# Get this from Appwrite Console after deploying the function
+#NEXT_PUBLIC_APPWRITE_FUNCTION_ID=
+#NEXT_PUBLIC_APPWRITE_AUTH_METHOD=default
