🔥 Clean up unused code and update .gitignore, modify login pages, and remove deprecated authentication functions.

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,9 @@ next-env.d.ts
 
 ignore1/
 ignore1/
+# Added by Autocommiter: ensure *.env*
+*.env*
+# Added by Autocommiter: ensure docx/
+docx/
+# Added by Autocommiter: ensure .docx/
+.docx/
